[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sounds/SFX/sfxFootstep1.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/scrPlayer.gd" type="Script" id=2]
[ext_resource path="res://Sounds/SFX/sfxWind.ogg" type="AudioStream" id=3]
[ext_resource path="res://Objects/Effects/fxCC.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/SFX/sfxDeath.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.65
height = 1.26

[sub_resource type="CapsuleMesh" id=2]
radius = 0.7
mid_height = 1.16
radial_segments = 5
rings = 1

[sub_resource type="Animation" id=3]
resource_name = "anmDie"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("playerHead/playerCam:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 0.3, 0.3, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.05, -0.5 ), Vector3( 0, 0.05, -0.5 ), Vector3( 0, -1.241, -0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("playerHead/playerCam:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 0.3, 0.3, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 3.86181e-06, -1.81896e-06, -50.442 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "" ],
"method": "die"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("nSelfUI/fxCC:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("nSelfUI/fxCC:material:shader_param/Shadows")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.4, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("nSelfUI/fxCC:material:shader_param/Midtones")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.5, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("nSelfUI/fxCC:material:shader_param/Hilights")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.6, 0, 0 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("PlayerDie")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("nSelfUI/clrNothingness:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerHead/playerCam:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.5, 2.4, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.05, -0.5 ), Vector3( 0.01, 0.01, -0.5 ), Vector3( 0, -0.05, -0.5 ), Vector3( 0.01, -0.012, -0.5 ), Vector3( 0, 0.05, -0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("playerHead/playerCam:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerHead/playerCam:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.98 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.03, 0.05, -0.5 ), Vector3( 0, -0.05, -0.5 ), Vector3( 0.03, 0.05, -0.5 ), Vector3( 0, -0.05, -0.5 ), Vector3( -0.03, 0.05, -0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("playerFoot/playerFootstep")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("playerHead/playerCam:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -2 ), Vector3( -2, 0, 0 ), Vector3( 0, 0, 2 ), Vector3( -2, 0, 0 ), Vector3( 0, 0, -2 ) ]
}

[node name="oPlayer" type="KinematicBody" groups=[
"Player",
]]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="playeCol" type="CollisionShape" parent="."]
transform = Transform( 0.775241, -7.10543e-15, 0, 0, -1.26303e-07, -0.775241, 7.10543e-15, 0.775241, -1.26303e-07, 6.96203e-10, 1.0008, -0.00796363 )
shape = SubResource( 1 )

[node name="playerModel" type="MeshInstance" parent="."]
transform = Transform( 0.775241, -7.10543e-15, 0, 0, -1.26303e-07, -0.775241, 7.10543e-15, 0.775241, -1.26303e-07, -4.21517e-09, 1.0008, 0.0482159 )
layers = 2
mesh = SubResource( 2 )
material/0 = null

[node name="playerGCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.1, 0 )

[node name="playerAnim" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.15
anims/anmDie = SubResource( 3 )
anims/anmIdle = SubResource( 4 )
anims/anmWalk = SubResource( 5 )

[node name="playerHead" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5907, 0 )

[node name="playerCam" type="Camera" parent="playerHead"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -0.5 )
cull_mask = 1048573
current = true
fov = 60.0
near = 0.01
far = 300.0

[node name="playerFoot" type="Spatial" parent="."]

[node name="playerFootstep" type="AudioStreamPlayer3D" parent="playerFoot"]
stream = ExtResource( 1 )
unit_db = 3.0
bus = "SFX"

[node name="playerLight" type="OmniLight" parent="playerFoot"]
light_energy = 0.7
light_specular = 0.0
omni_range = 10.0
omni_attenuation = 1.8

[node name="playerAir" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = -80.0
autoplay = true
bus = "BGS"

[node name="PlayerDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
bus = "SFX"

[node name="playerTween" type="Tween" parent="."]

[node name="nSelfUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="nSelfUI"]
position = Vector2( 180, 320 )
scale = Vector2( 1.8, 3.2 )
copy_mode = 2

[node name="fxCC" parent="nSelfUI" instance=ExtResource( 4 )]
visible = false

[node name="clrNothingness" type="ColorRect" parent="nSelfUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[connection signal="finished" from="playerFoot/playerFootstep" to="." method="_on_playerFootstep_finished"]
